--- a/style.css
+++ b/style.css
@@ -7,8 +7,10 @@ body {
   padding: 10px;
   margin: 10px;
   margin-top: 100px;
+  width: 300px;
   border-radius: 20px;
   border-radius: 5px;
+  contain;
 }
 span{
   font-size: 90px;
